CREATE TABLE [dbo].[Courses]
(
	[Id] INT NOT NULL PRIMARY KEY identity,
	[Name] nvarchar(50) Not null,
)
